--- a/practic/index.html
+++ b/practic/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="adaptive.css">
+    <script defer src="main.js"></script>
     <title>CALIFORNIA</title>
 </head>
 
@@ -41,6 +42,7 @@
                             <li><a href="#">SUPPORT</a></li>
                         </ul>
                     </div>
+                    <button class="btn"></button>
                 </div>
                 
             </div>
